--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb+srv://yagowill3:F4V8Q30q05soRW5i@cluster0.bwnevtc.mongodb.net/aluraDb?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://user:password@cluster0.bwnevtc.mongodb.net/aluraDb?retryWrites=true&w=majority
